
syntax = "proto3";
package com.hugoserve.demo.proto;

option java_package = "com.hugoserve.demo.proto";
option java_multiple_files = true;

message UserDetailsDTO {
  string username = 1;
  string password = 2;
}
